apps/mautrix/meta/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta
spec:
  hostnames:
    - mautrix-meta.i.shikanime.studio
  parentRefs:
    - name: meta
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meta-redirect
spec:
  hostnames:
    - mautrix-meta.i.shikanime.studio
  parentRefs:
    - name: meta
      sectionName: http
